<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingStart="16dp"
    android:paddingEnd="16dp"
    android:paddingBottom="8dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <View
        android:layout_gravity="center_horizontal"
        android:layout_margin="8dp"
        android:layout_width="25dp"
        android:layout_height="8dp"
        android:background="@drawable/view_top_bottom_sheet"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textView_msg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/msg_delete"
        style="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@android:color/black"/>

    <com.google.android.material.checkbox.MaterialCheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/t_filter"
        android:checked="false"
        android:id="@+id/checkbox_filter"
        android:layout_marginTop="8dp"/>

    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ad_view"
        ads:adUnitId="@string/ad_id_banner"
        ads:adSize="BANNER"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="8dp"
        android:gravity="end">

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:id="@+id/button_cancel"
            android:textColor="@color/colorPrimary"/>

        <com.google.android.material.button.MaterialButton
            android:textColor="@android:color/white"
            app:backgroundTint="@color/colorPrimary"
            android:layout_marginStart="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            android:id="@+id/button_action"/>

    </LinearLayout>

</LinearLayout>