<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.ProActivity">

    <include
        layout="@layout/toolbar"/>

    <ImageView
        android:contentDescription="@string/upgrade_to_premium"
        android:layout_width="match_parent"
        android:layout_height="@dimen/upgrade_banner_height"
        android:src="@drawable/ic_upgrade_banner_800_600"
        android:scaleType="centerCrop"
        android:layout_marginBottom="@dimen/padding_item_tweet_more"/>

    <LinearLayout
        android:padding="@dimen/padding_item_tweet_more"
        android:gravity="center_vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:contentDescription="@string/icon"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/ic_checked_512dp"/>

        <TextView
            style="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@android:color/black"
            android:layout_marginStart="@dimen/padding_item_tweet_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/access_to_multi_account"/>

    </LinearLayout>

    <LinearLayout
        android:padding="@dimen/padding_item_tweet_more"
        android:gravity="center_vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:contentDescription="@string/icon"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/ic_checked_512dp"/>

        <TextView
            style="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@android:color/black"
            android:layout_marginStart="@dimen/padding_item_tweet_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remove_all_ads"/>

    </LinearLayout>

    <LinearLayout
        android:padding="@dimen/padding_item_tweet_more"
        android:gravity="center_vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:contentDescription="@string/icon"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/ic_checked_512dp"/>

        <TextView
            style="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@android:color/black"
            android:layout_marginStart="@dimen/padding_item_tweet_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/access_to_remove_likes_section"/>

    </LinearLayout>

    <LinearLayout
        android:padding="@dimen/padding_item_tweet_more"
        android:gravity="center_vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:contentDescription="@string/icon"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/ic_checked_512dp"/>

        <TextView
            style="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@android:color/black"
            android:layout_marginStart="@dimen/padding_item_tweet_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_monthly"/>

    </LinearLayout>

    <Space
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <LinearLayout
        android:layout_margin="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/restore"
            android:layout_marginEnd="8dp"
            android:id="@+id/button_restore"
            style="@style/Widget.MaterialComponents.Button.TextButton"/>

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buy"
            android:id="@+id/imageButton_buyGold"/>

    </LinearLayout>

</LinearLayout>