<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.AboutActivity">

    <include
        android:id="@+id/appbarLayout"
        layout="@layout/toolbar"/>

    <LinearLayout
        android:layout_margin="8dp"
        android:padding="2dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:src="@drawable/icon_main"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            style="@style/TextAppearance.AppCompat.Title"
            android:text="@string/app_name"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/version_1_0_0"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/app_about"/>

    </LinearLayout>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="8dp"
        app:cardCornerRadius="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="@style/Widget.AppCompat.Light.ActionButton"
                android:text="@string/email"
                android:id="@+id/button_email"
                android:drawableTop="@drawable/ic_email_black_24dp"
                android:padding="4dp"/>

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="@style/Widget.AppCompat.Light.ActionButton"
                android:text="@string/share"
                android:id="@+id/button_share"
                android:drawableTop="@drawable/ic_share_black_24dp"
                android:padding="4dp"/>

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="@style/Widget.AppCompat.Light.ActionButton"
                android:text="@string/feedback"
                android:drawableTop="@drawable/ic_email_black_24dp"
                android:id="@+id/button_feedBack"
                android:padding="4dp"/>

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="@style/Widget.AppCompat.Light.ActionButton"
                android:text="@string/rate"
                android:id="@+id/button_rate"
                android:drawableTop="@drawable/ic_star_black_24dp"
                android:padding="4dp"/>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:cardCornerRadius="8dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Base.TextAppearance.AppCompat.Title"
                android:text="@string/other_apps"
                android:gravity="center"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:orientation="horizontal"
                android:layout_marginBottom="8dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="60dp"
                    android:padding="4dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_app_launcher_512dp"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    style="@style/Base.TextAppearance.AppCompat.Title"
                    android:text="@string/app_launcher_and_extractor"
                    android:textSize="15sp"
                    android:paddingEnd="8dp"
                    android:paddingStart="8dp"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/button_appLauncher"
                    android:text="@string/install"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Base.Widget.AppCompat.Button.Colored" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:orientation="horizontal"
                android:layout_marginBottom="8dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="60dp"
                    android:layout_height="match_parent"
                    android:padding="4dp"
                    android:src="@drawable/ic_app_material_color_512dp"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    style="@style/Base.TextAppearance.AppCompat.Title"
                    android:text="@string/material_color"
                    android:textSize="15sp"
                    android:paddingEnd="8dp"
                    android:paddingStart="8dp"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/button_appMaterial"
                    android:text="@string/install"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Base.Widget.AppCompat.Button.Colored" />

            </LinearLayout>

            <LinearLayout
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:orientation="horizontal"
                android:layout_marginBottom="8dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="60dp"
                    android:layout_height="match_parent"
                    android:padding="4dp"
                    android:src="@drawable/ic_app_twttr_tools_512dp"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    style="@style/Base.TextAppearance.AppCompat.Title"
                    android:text="@string/twitter_tools"
                    android:textSize="15sp"
                    android:paddingEnd="8dp"
                    android:paddingStart="8dp"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/button_appTwttrTools"
                    android:text="@string/install"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Base.Widget.AppCompat.Button.Colored" />

            </LinearLayout>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</LinearLayout>